--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,9 +73,22 @@ nav{
     padding-top: 3rem;
     background-image: linear-gradient(to top, #636262, rgb(123, 126, 126));
 }
+@keyframes baner {
+    
+    0%{ 
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
 .imgBanner{
     grid-row: 1/5;
     grid-column: 3/8;
+    animation-duration: 7s;
+    animation-name: baner;
+    animation-delay: 0s;
     img{
         width: 100%;
     }
@@ -87,6 +100,9 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    animation-duration: 7s;
+    animation-name: baner;
+    animation-delay: 0s;
 }
 .infoSub{
     font-size: 1.5rem;
@@ -118,26 +134,34 @@ nav{
     padding-top: 3rem;
     background-color: #636262;
 }
-.imagPie{
-    grid-row: 1/3;
-    grid-column: 2/6;
-}
 .textPie{
-    grid-column: 6/9;
     text-align: center;
-    padding-top: 3rem;
+}
+@keyframes imavideo {
+    
+    0%{ 
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
 }
 .videoBanner{
     grid-row: 1/5;
     grid-column: 3/8;
+    animation-duration: 7s;
+    animation-name: imavideo;
+    animation-delay: 0s;
 }
 .infoVideo{
-    grid-column: 8/11;
-    grid-row: 1/7;
     background-color: #a4b8bf;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    animation-duration: 7s;
+    animation-name: imavideo;
+    animation-delay: 0s;
 }
 .videoBanner iframe{
     width: 100%;
@@ -152,15 +176,22 @@ nav{
         font-size: 0.9rem;
     }
 }
-.formulario{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 1rem;
-    grid-row: 1/5;
-    grid-column: 6/8;
-    background-color: #bbccd1;
-}
+@keyframes formu {
+    
+    0%{ 
+        opacity: 0;
+    }
 
+    100%{
+        opacity: 1;
+    }
+}
+.formulario{
+    background-color: #bbccd1;
+    animation-duration: 7s;
+    animation-name: imavideo;
+    animation-delay: 0s;
+}
 .banner_formulario{
     display: grid;
     grid-template-columns: repeat(12,1fr);
@@ -172,43 +203,104 @@ nav{
     list-style: none;
     font-size: 1rem;
 }
+@keyframes galer {   
+    0%{ 
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
 .imagGaleria{
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(6, 10rem);
     background-image: linear-gradient(to top, #636262, rgb(123, 126, 126));
+    animation-duration: 7s;
+    animation-name: imavideo;
+    animation-delay: 0s;
 }
-.galeria{
-    grid-column: 3/11;
-    grid-row: 1/7;
-    padding-top: 1rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    background-color: #999a9b;
+@keyframes galer {   
+    0%{ 
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
 }
 .imagNosotros{
     display: grid;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: repeat(6, auto);
     background-image: linear-gradient(to top, #636262, rgb(123, 126, 126));
+    animation-duration: 7s;
+    animation-name: imavideo;
+    animation-delay: 0s;
 }
-.img{
-    grid-column: 2/12;
-    grid-row: 1/5;
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.textNosotros{
-    grid-column: 3/11;
-    grid-row: 5/6;
-    ul{
-        color: white;
-        list-style: "-";
+@media screen and (max-width: 1024px) and (min-width: 481px){
+    body{
+        font-size: 16px;
+    }
+    .infoVideo{
+        grid-row: 1/5;
+        grid-column: 8/12;
+    }
+    .videoBanner{
+        grid-row: 1/5;
+        grid-column: 2/8;
+    }
+    .formulario {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        padding-left: 3rem;
+        grid-row: 1/5;
+        grid-column: 5/9;
+    }
+    .galeria{
+        padding-top: 3rem;
+        padding-left: 1.5rem;
+        grid-row: 1/10;
+        grid-column: 2/12;
+    }
+    .img{
+        grid-column: 2/6;
+        grid-row: 1/5;
+        padding-top: 3rem;
+    }
+    .textNosotros{
+        grid-column: 6/11;
+        grid-row: 1/6;
+        ul{
+            color: white;
+            list-style: "-";
+            padding-top:7rem;
+        }
+    }
+    .imagLogo{
+        grid-column: 8/11;
+        padding-left: 1.5rem;
+        padding-top: 2rem;
+    }
+    .imagPie{
+        grid-row: 1/2;
+        grid-column: 2/3;
+    }
+    .textPie{
+        grid-row: 2/2;
+        grid-column: 4/10;
+    }
+    .formulario{
+        li{
+            padding-bottom: 1.5rem;
+        }
     }
 }
-
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px) and (min-width: 321px){
+    body{
+        font-size: 14px;
+    }
     nav{
         grid-column: 1/ span 12;
     }
@@ -227,12 +319,14 @@ nav{
     }
     .textPie{
         grid-row: 2/3;
-        grid-column: 4/11;
-        padding: 0%;
+        grid-column: 3/11;
+        padding-top: 0%;
+        padding-left: .3rem;
     }
     .imagLogo{
         grid-row: 1/2;
-        grid-column: 5/10;
+        grid-column: 4/10;
+        padding-left: 15px;
     }
     .videoBanner{
         grid-row: 1/5;
@@ -248,5 +342,74 @@ nav{
         grid-row: 1/5;
         grid-column: 4/10;
     }
-    
+    .galeria{
+        grid-column: 2/11;
+        grid-row: 1/10;
+        padding-top: 2rem;
+    }
+    .img{
+        grid-column: 3/11;
+        grid-row: 1/5;
+        padding-left: .5rem;
+    }
+    .textNosotros{
+        display: none;
+    }
+}
+@media screen and (max-width: 320px){
+    body{
+        font-size: 12px;
+    }
+    nav{
+        grid-column: 1/ span 12;
+    }
+    .infoBanner{
+        display: none;
+    }
+    .imgBanner{
+        grid-row: 1/5;
+        grid-column: 1/13;
+        
+    }
+    .imagPie{
+        display: none;
+    }
+    .textPie{
+        grid-row: 2/3;
+        grid-column: 3/11;
+        padding-top: 0%;
+        padding-left: .3rem;
+    }
+    .imagLogo{
+        grid-row: 1/2;
+        grid-column: 3/11;
+        padding-left: .5rem;
+    }
+    .videoBanner{
+        grid-row: 1/5;
+        grid-column: 1/13;
+    }
+    .infoVideo{
+        display: none;
+    }
+    .listaVideo{
+        display: none;
+    }
+    .formulario{
+        grid-row: 1/5;
+        grid-column: 3/11;
+    }
+    .galeria{
+        grid-column: 1/12;
+        grid-row: 1/10;
+        padding-top: 2rem;
+    }
+    .img{
+        grid-column: 3/11;
+        grid-row: 1/5;
+        padding-left: .5rem;
+    }
+    .textNosotros{
+        display: none;
+    }
 }
